@@ -18,6 +18,8 @@ git-annex (6.20160528) UNRELEASED; urgency=medium
   * remotedaemon: Fixed support for notifications of changes to gcrypt
     remotes, which was never tested and didn't quite work before.
   * list: Do not include dead repositories.
+  * move --to: Better behavior when system is completely out of disk space;
+    drop content from disk before writing location log.
 
  -- Joey Hess <id@joeyh.name>  Fri, 27 May 2016 13:12:48 -0400
 
